--- a/src/components/common/header.scss
+++ b/src/components/common/header.scss
@@ -19,8 +19,7 @@ $pink: #f65c8c;
   }
   .searchBox {
     .searchInput {
-      padding: 20px;
-      text-align: center;
+      padding: 20px 20px 20px 100px;
       width: 500px;
       border-radius: 6px;
       border: solid 1px #e7e7e7;
