--- a/src/containers/teacherDetails/details.scss
+++ b/src/containers/teacherDetails/details.scss
@@ -45,6 +45,7 @@ $pink: #f65c8c;
           background-color: #fafafa;
         }
         .mainBox {
+          cursor: pointer;
           .classBox {
             width: 180px;
             height: 60px;
