--- a/src/components/common/header.scss
+++ b/src/components/common/header.scss
@@ -2,8 +2,11 @@ $dark: #171d35;
 $pink: #f65c8c;
 .mainHeader {
   height: 80px;
+  position: fixed;
+  width: 100%;
   padding: 0 50px;
   display: flex;
+  z-index: 100;
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
