--- a/src/components/teachers.scss
+++ b/src/components/teachers.scss
@@ -1,14 +1,20 @@
 $dark: #171d35;
 .teacherMain {
   padding: 40px 50px 0 30px;
+  position: inherit;
   .mainTitle {
     padding-left: 20px;
   }
   .listContainer {
     padding-top: 20px;
     display: flex;
-    flex-grow: 1;
     flex-wrap: wrap;
+    min-height: 400px;
+    .listInnerContainer {
+      padding: 20px 0 0 20px;
+      flex-grow: 1;
+      flex-basis: 30em;
+    }
   }
 }
 
@@ -22,10 +28,9 @@ $dark: #171d35;
   .shortName {
     width: 60px;
     height: 60px;
+    line-height: 60px;
     border-radius: 50%;
-    display: flex;
     align-items: center;
-    padding: 10px;
     font-size: 20px;
     font-weight: bold;
     color: $dark;
