--- a/src/containers/teacherDetails/details.scss
+++ b/src/containers/teacherDetails/details.scss
@@ -35,9 +35,12 @@ $pink: #f65c8c;
       background-color: #f9f9f9;
       .ttDetailsMain {
         width: 184px;
-        padding: 10px 0 10px 10px;
+        padding: 10px;
         background: rgb(255, 255, 255);
         box-sizing: content-box;
+        &.selected {
+          background: #f2f2f2;
+        }
         .mainEmptyBox {
           width: 180px;
           height: 180px;
@@ -45,6 +48,7 @@ $pink: #f65c8c;
           background-color: #fafafa;
         }
         .mainBox {
+          
           cursor: pointer;
           .classBox {
             width: 180px;
@@ -88,8 +92,8 @@ $pink: #f65c8c;
   position: absolute;
   top: 80px;
   right: 0;
+  min-height: 790px;
   width: 400px;
-  height: 100%;
   background: #fff;
   z-index: 100;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
